--- a/src/doxygen.css
+++ b/src/doxygen.css
@@ -598,123 +598,68 @@ span.mlabel {
 
 /* @end */
 
-/* @group Directory (tree) */
-
-/* for the tree view */
-
-.ftvtree {
-	font-family: sans-serif;
-	margin: 0px;
-}
-
-/* these are for tree view when used as main index */
-
-.directory {
-	font-size: 9pt;
-	font-weight: bold;
-	margin: 5px;
-}
-
-.directory h3 {
-	margin: 0px;
-	margin-top: 1em;
-	font-size: 11pt;
-}
-
-/*
-The following two styles can be used to replace the root node title
-with an image of your choice.  Simply uncomment the next two styles,
-specify the name of your image and be sure to set 'height' to the
-proper pixel height of your image.
-*/
-
-/*
-.directory h3.swap {
-	height: 61px;
-	background-repeat: no-repeat;
-	background-image: url("yourimage.gif");
-}
-.directory h3.swap span {
-	display: none;
-}
-*/
-
-.directory > h3 {
-	margin-top: 0;
-}
-
-.directory p {
-	margin: 0px;
-	white-space: nowrap;
-}
-
-.directory div {
-	display: none;
-	margin: 0px;
-}
-
-.directory img {
-	vertical-align: -30%;
-}
-
 /* these are for tree view when not used as main index */
 
-div.directoryalt {
+div.directory {
         margin: 10px 0px;
         border-top: 1px solid #A8B8D9;
         border-bottom: 1px solid #A8B8D9;
         width: 100%;
 }
 
-.directoryalt table {
+.directory table {
         border-collapse:collapse;
 }
 
-.directoryalt td {
+.directory td {
         margin: 0px;
         padding: 0px;
 	vertical-align: top;
 }
 
-.directoryalt td.entry {
+.directory td.entry {
         white-space: nowrap;
         padding-right: 6px;
 }
 
-.directoryalt td.desc {
+.directory td.desc {
         width: 100%;
         padding-left: 6px;
 	padding-right: 6px;
 	border-left: 1px solid rgba(0,0,0,0.05);
 }
 
-.directoryalt tr.even {
+.directory tr.even {
 	padding-left: 6px;
 	background-color: ##F8;
 }
 
-.directoryalt img {
+.directory img {
 	vertical-align: -30%;
 }
 
-.directoryalt .levels {
+.directory .levels {
         white-space: nowrap;
         width: 100%;
         text-align: right;
         font-size: 9pt;
 }
 
-.directoryalt .levels span {
+.directory .levels span {
         cursor: pointer;
         padding-left: 2px;
         padding-right: 2px;
 	color: ##50;
 }
 
-/* @end */
-
 div.dynheader {
         margin-top: 8px;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 address {
@@ -1102,6 +1047,30 @@ div.toc li.level4 {
         margin-left: 45px;
 }
 
+.inherit_header {
+        font-weight: bold;
+        color: gray;
+        cursor: pointer;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.inherit_header td {
+        padding: 6px 0px 2px 5px;
+}
+
+.inherit {
+        display: none;
+}
+
+tr.heading h2 {
+        margin-top: 12px;
+        margin-bottom: 4px;
+}
 
 @media print
 {
