--- a/doc/doxygen_manual.css
+++ b/doc/doxygen_manual.css
@@ -237,7 +237,7 @@ body {
 
 div.contents {
 	margin-bottom: 10px;
-	padding: 8px;
+	padding: 12px;
 	margin-left: auto;
 	margin-right: auto;
 	width: 800px;
@@ -861,8 +861,8 @@ div.header
  	margin-left: auto;
  	margin-right: auto;
  	width: 800px;
- 	padding-left: 8px;
- 	padding-right: 8px;
+ 	padding-left: 12px;
+ 	padding-right: 12px;
          /* firefox specific markup */
          -moz-box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 5px;
          /* webkit specific markup */
@@ -881,42 +881,62 @@ dl
 
 dl.section
 {
-        border-left:4px solid;
         padding: 0 0 0 6px;
 }
 
 dl.note
 {
+        margin-left:-7px;
+        padding-left: 3px;
+        border-left:4px solid;
         border-color: #D0C000;
 }
 
 dl.warning, dl.attention
 {
+        margin-left:-7px;
+        padding-left: 3px;
+        border-left:4px solid;
         border-color: #FF0000;
 }
 
 dl.pre, dl.post, dl.invariant
 {
+        margin-left:-7px;
+        padding-left: 3px;
+        border-left:4px solid;
         border-color: #00D000;
 }
 
 dl.deprecated
 {
+        margin-left:-7px;
+        padding-left: 3px;
+        border-left:4px solid;
         border-color: #505050;
 }
 
 dl.todo
 {
+        margin-left:-7px;
+        padding-left: 3px;
+        border-left:4px solid;
         border-color: #00C0E0;
 }
 
 dl.test
 {
+        margin-left:-7px;
+        padding-left: 3px;
+        border-left:4px solid;
         border-color: #3030E0;
 }
 
 dl.bug
 {
+        margin-left:-7px;
+        padding-left: 3px;
+        border-left:4px solid;
         border-color: #C08050;
 }
 
